periodically populate hourly top download/upload
