# api/routes/system.js
@@ -1,4 +1,4 @@
-/*    Copyright 2016 Firewalla LLC 
+/*    Copyright 2016 Firewalla LLC
  *
  *    This program is free software: you can redistribute it and/or  modify
  *    it under the terms of the GNU Affero General Public License, version 3,
@@ -32,11 +32,19 @@ let redis = require('redis');
 
 let Firewalla = require('../../net2/Firewalla.js');
 
+let Promise = require('bluebird');
+
+let NetBotTool = require('../../net2/NetBotTool');
+let netBotTool = new NetBotTool();
+
+let async = require('asyncawait/async');
+let await = require('asyncawait/await');
+
 
 /* system api */
-router.get('/info', 
+router.get('/info',
 //    passport.authenticate('bearer', { session: false }),
-           function(req, res, next) {             
+           function(req, res, next) {
              res.json({
                ip_address: sysManager.myIp(),
                mac_address: sysManager.myMAC(),
@@ -53,7 +61,7 @@ router.get('/status',
              let hm = new HostManager('system_api', 'client', 'info');
              let compressed = req.query.compressed;
 
-             hm.toJson(true, (err, json) => {               
+             hm.toJson(true, (err, json) => {
                if(err) {
                  res.status(500).send({error: err});
                  return;
@@ -80,8 +88,42 @@ router.get('/status',
 
 router.get('/flow',
     function(req, res, next) {
-        
+
     });
+
+router.get('/topDownload',
+  (req, res, next) => {
+    let now = new Date() / 1000;
+    let end = Math.floor(now / 3600) * 3600;
+    let begin = end - 3600;
+    let json = {};
+    netBotTool.prepareTopDownloadFlows(json, {
+      begin: begin,
+      end: end
+    }).then(() => {
+      res.json(json);
+    }).catch((err) => {
+      res.status(500).send({error: err});
+    })
+  }
+);
+
+router.get('/topUpload',
+  (req, res, next) => {
+    let now = new Date() / 1000;
+    let end = Math.floor(now / 3600) * 3600;
+    let begin = end - 3600;
+    let json = {};
+    netBotTool.prepareTopUploadFlows(json, {
+      begin: begin,
+      end: end
+    }).then(() => {
+      res.json(json);
+    }).catch((err) => {
+      res.status(500).send({error: err});
+    })
+  }
+);
 
 router.get('/perfstat',
           function(req, res, next) {
@@ -91,7 +133,7 @@ router.get('/perfstat',
                 res.send('server error');
                 return;
               }
-              
+
               res.json(stat);
             });
           });
@@ -99,11 +141,11 @@ router.get('/perfstat',
 router.get('/heapdump',
   (req, res, next) => {
     let process = req.query.process;
-    
+
     process = process || "FireApi";
-    
+
     let file = Firewalla.getTempFolder() + "/" + process + "-heapdump-" + new Date() /1000 + ".heapsnapshot";
-    
+
     switch(process) {
       case "FireApi":
         sysInfo.getHeapDump(file, (err, file) => {
@@ -115,13 +157,13 @@ router.get('/heapdump',
 
           res.download(file);
         });
-        
+
         break;
       case "FireMain":
       case "FireMon":
         let rclient = redis.createClient();
         let sclient = redis.createClient();
-        
+
         rclient.on("message", (channel, message) => {
           if(channel === "heapdump_done" && message ) {
             try {
@@ -141,13 +183,13 @@ router.get('/heapdump',
           title: process,
           file: file
         }));
-        
+
         break;
       default:
         res.status(404).send("");
     }
-    
-    
+
+
   });
 
 module.exports = router;
